# mate-file-manager-gksu

./: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
.tx/: config
caja-gksu/: libcaja-gksu.c
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  am.po  ar.po  ast.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  eo.po  es.po  eu.po  fr.po  gl.po  gnome-copyrights.txt  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ko.po  ky.po  lt.po  lv.po  ms.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  (+9 more)
